# lore

./: .gitignore  README.md  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: __init__.py  api_keys.py  bootstrap.py  context.py  entities.py  events.py  health.py  mining.py  proposals.py  rules.py  webhooks.py
backend/app/database/: __init__.py  neo4j.py  postgres.py  redis.py
backend/app/integrations/: github.py  linear.py  slack.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  context.py  entities.py  events.py  rules.py
backend/app/services/: context_graph.py  entity_service.py  event_capture.py  kafka_producer.py  pattern_mining.py  rule_engine.py
backend/app/workers/: __init__.py  pattern_mining_worker.py
backend/migrations/: 001_initial.sql  002_add_extensions.sql  003_m2_conflict_expiry.sql  004_auth.sql  005_seed_workspace.sql
backend/tests/: __init__.py  conftest.py  test_auth.py  test_context.py  test_events.py  test_pattern_mining.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/bootstrap/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/api-keys/: _client.tsx  actions.ts  page.tsx
frontend/src/app/dashboard/corrections/: page.tsx
frontend/src/app/dashboard/entities/: page.tsx
frontend/src/app/dashboard/rules/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/components/: bootstrap-on-mount.tsx  page-header.tsx  sidebar.tsx  stats-card.tsx  status-badge.tsx
frontend/src/lib/: api.ts  utils.ts
sdk/python/: README.md  pyproject.toml
sdk/python/loremem/: __init__.py  _http.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  http.ts  index.ts  models.ts
sdk/typescript/tests/: client.test.ts
